fix(elastic)    - fix le probleme de rechagre sur plusieur tableau en meme temps Refs:#110